--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
   <div class="card">
     <h1>JapaneseSpeaker</h1>
-    <input type="text" placeholder="Digite uma letra ou palavra em japonês">
-    <button id="playButton" disabled>REPRODUZIR AUDIO</button>
+    <input type="text" placeholder="Type a word or sentence in japanese">
+    <button id="playButton" disabled>PLAY AUDIO</button>
   </div>
 
   <script src="./src/index.js"></script>
